added dotenv and removed express

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "pg": "^8.11.3",
-    "inquirer": "8.2.4"
+    "dotenv": "^16.4.5",
+    "inquirer": "8.2.4",
+    "pg": "^8.11.3"
   }
 }
